Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@ It has not been tested with other flavors of Emacs (e.g. Prelude).</p>
 <li>Tag navigation</li>
 </ol>
 
+<p><img src="http://i.imgur.com/MLiiWzxs.jpg" alt=""> <img src="http://i.imgur.com/9CYSeMQs.jpg" alt=""> <img src="http://i.imgur.com/NOe9f4fs.jpg" alt=""></p>
+
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>Clone from Github:
 <code>git clone https://github.com/mjj55409/sme-mode.git</code></p>
 
-<p>Add your your .emacs.d/init.el file:</p>
+<p>Or download the zip archive and unzip it locally.</p>
+
+<p>Add to your .emacs.d/init.el file:</p>
 
 <pre><code>(add-to-list 'load-path (&lt;your-path-to-sme-mode&gt;))
 (require 'sme-mode)
